--- a/package.json
+++ b/package.json
@@ -1,15 +1,29 @@
 {
   "name": "clothes-by-weather",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "src/clothes-by-weather.js",
   "author": "Erik Lilja <erikvlilja@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "jest": "^24.9.0"
   },
+  "keywords": [
+    "clothes by weather",
+    "weather",
+    "dress by weather"
+  ],
+  "files": [
+    "src/clothes-by-weather.js"
+  ],
   "jest": {
     "testEnvironment": "node"
   },
+  "repository": {
+    "url": "https://github.com/lilja/clothes-by-weather",
+    "type": "git"
+  },
+  "bugs": "https://github.com/lilja/clothes-by-weather/issues",
+  "homepage": "https://github.com/lilja/clothes-by-weather",
   "scripts": {
     "test": "jest"
   }
