--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
   "scripts": {
     "test": "jest",
     "lint": "npx eslint src/ test/"
+  },
+  "resolutions": {
+    "minimist": "1.2.6"
   }
 }
